# src/domains/consultations/dto/get-devices.dto.ts
@@ -49,6 +49,9 @@ export class DeviceResponseDto {
   @ApiProperty({ description: '공시지원금' })
   publicSubsidy: number;
 
+  @ApiProperty({ description: '출시일 (YYYY-MM-DD 형식)' })
+  releaseDate: Date;
+
   @ApiProperty({ description: '할부원금 (출고가 - 공시지원금)' })
   principal: number;
 }
